--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!doctype html>
+<html class="no-js" lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>DirectionGroup | Digital Labs</title>
+		<link rel="stylesheet" href="css/foundation.css" />
+		<link rel="stylesheet" href="css/app.css" />
+		<link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+
+		<div class="row">
+			<div class="large-12 columns">
+				<h1>Digital Labs</h1>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="medium-4 columns">
+				<a href="" target="_blank">
+					<img src="img/lose-clients-annoy-coworkers.png" alt="Lose clients annoy coworkers">
+				</a>
+			</div>
+			<div class="medium-8 columns">
+				<p>Digital labs experiment</p>
+			</div>
+		</div>
+
+		<script src="js/vendor/jquery.min.js"></script>
+		<script src="js/vendor/what-input.min.js"></script>
+		<script src="js/foundation.min.js"></script>
+		<script src="js/app.js"></script>
+	</body>
+</html>
