Change font. Centre page. limit width

--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
 		<title>DirectionGroup | Digital Labs</title>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/app.css" />
-		<link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:100' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-
 		<div class="row">
-			<div class="large-12 columns">
-				<h1>Digital Labs</h1>
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="medium-4 columns">
-				<a href="" target="_blank">
-					<img src="img/lose-clients-annoy-coworkers.png" alt="Lose clients annoy coworkers">
-				</a>
-			</div>
-			<div class="medium-8 columns">
-				<p>Digital labs experiment</p>
+			<div class="large-8 medium-10 small-12 large-centered medium-centered small-centered">
+				<div class="row">
+					<div class="large-12 columns">
+						<h1 class="text-hero text-center">Digital Labs</h1>
+					</div>
+				</div>
+				
+				<div class="row">
+					<div class="medium-8 columns">
+						<h3>Lose clients and annoy coworkers</h3>
+					</div>
+					
+					<div class="medium-4 columns">
+						<a href="" target="_blank">
+							<img src="img/lose-clients-annoy-coworkers.png" alt="Lose clients annoy coworkers">
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 
