Add homepage link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 			<div class="large-8 medium-10 small-12 large-centered medium-centered small-centered">
 				<div class="row">
 					<div class="large-12 columns">
-						<h1 class="text-hero text-center">Digital Labs</h1>
+						<a href="https://directiongroup.github.io/">
+							<h1 class="text-hero text-center">Digital Labs</h1>
+						</a>
 					</div>
 				</div>
 				
