Add link to lab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</div>
 					
 					<div class="medium-4 columns">
-						<a href="" target="_blank">
+						<a href="http://directiongroup.github.io/lose-clients-annoy-coworkers/" target="_blank">
 							<img src="img/lose-clients-annoy-coworkers.png" alt="Lose clients annoy coworkers">
 						</a>
 					</div>
