--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<script src="js/vendor/jquery.min.js"></script>
 		<script src="js/vendor/what-input.min.js"></script>
 		<script src="js/foundation.min.js"></script>
+		<script src="js/snap.svg-min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
